# EdgeFleet

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: docs-pages.yml
docs/: Makefile  agents.rst  approvals_goals.rst  architecture.rst  cli.rst  conf.py  configuration.rst  deployment.rst  index.rst  installation.rst  make.bat  memory_retrieval.rst  multi_agent.rst  overview.rst  quickstart.rst  reasoning.rst  security.rst  tasks.rst  testing.rst
docs/_ext/: usecase_catalog.py
docs/_static/: edgefleet.css
docs/api/: actions.rst  agent.rst  cli.rst  client.rst  index.rst  integrations.rst  llm.rst  models.rst  orchestrator.rst  package.rst  prompts.rst  reasoning.rst  retrieval.rst  routing.rst  security.rst  state.rst  store.rst
docs/integrations/: a2a.rst  index.rst  langgraph.rst  mcp.rst  nats.rst  ros2.rst
docs/use_cases/: agriculture.rst  approvals.rst  boundaries.rst  earthquake_map_rescue_cookbook.rst  edge_it.rst  gateways.rst  healthcare.rst  index.rst  industrial.rst  iot.rst  knowledge.rst  lab_automation_cell.rst  logistics.rst  multi_agent.rst  privacy.rst  product_patterns.rst  reasoning_workflows.rst  remote.rst  research.rst  retail.rst  robotics.rst  smart_buildings.rst  trading_advanced_cookbook.rst  trading_base_cookbook.rst  trading_operations_copilot.rst  transportation.rst
examples/: client.py  edge_agent.py  reasoning_client.py
examples/use_cases/: __init__.py  (+3 more)
tests/: test_a2a.py  test_agent.py  test_api.py  test_goals.py  test_orchestrator.py  test_reasoning.py  test_use_case_catalog.py
(+21 files in other folders)
